--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title_activity_calculator">GPA Calculator</string>
     <string name="pref_credits">Credits</string>
     <string name="pref_add_credits">Add Credit Hrs.</string>
+    <string name="pref_add_grade">Add Grade</string>
     <string name="pref_background_color">Backgroud Color</string>
     <string name="pref_background_color_default">#fff4f4f4</string>
     <string name="pref_display">Display</string>
